Update Recurrent Neural Network.ipynb

--- a/Recurrent Neural Network.ipynb
+++ b/Recurrent Neural Network.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial on implementing recurrent neural networks (RNNs) will build on [the previous tutorial on how to implement a feedforward neural network]({% post_url 2015-06-10-neural-network-implementation-part01 %}). Please check out this previous tutorial if you are unfamiliar with neural network basics such as backpropagation.\n",
+    "In the previous article, the author has discussed the theories and mechanism for each stage of building a convolutional neural network. As such, we are going to define the recurrent neural network, its function and the way it works in this repository. RNN is a little more complicated than the neural network in the previous blog because the current time status and ourput in RNN will depends on the status in the previous time.",
     "\n",
-    "This first part will illustrate how to implement a [simple RNN](#Linear-recurrent-neural-network) and how to train it with [Backpropagation through time](#Training-with-backpropagation-through-time) using [Rprop](#Rprop-optimisation) optimization. [Part 2]({% post_url 2015-09-27-rnn-implementation-part02 %}) will describe how to build a more complex RNN with non-linear activations and tensor inputs.\n"
+    "While there are many available packages such as Tensorflow or Kenras that can use a recurrent neural network easily and quickly, understanding the logic and theories behind the deep and complex concept of RNN benefit its user in many ways and is also a good exercise to flex the ability modify and tweak a model."
    ]
   },
   {
